# names

./: .cirrus.yml  .gitattributes  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  README.tpl  build.rs  index.html  install.sh  release.toml  search-index.js
.ci/: build-cargo-make.ps1  build-cargo-make.sh  build-checksums.ps1  build-checksums.sh  build-docker-image.sh  cirrus-release.sh  install-cargo-make.ps1  install-cargo-make.sh  names.manifest.txt  publish-artifact.ps1  publish-artifact.sh  sha256.ps1  sha256.sh
.github/: bors.toml
cli/: Cargo.toml  README.md
cli/scripts/: build_darwin.sh  build_docker.sh  build_linux.sh  build_unix_release.sh
cli/src/: main.rs
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/iter/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js
names/: constant.ADJECTIVES.html  constant.NOUNS.html  enum.Name.html  index.html  struct.Generator.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
src/: adjectives.rs  lib.rs  main.rs  nouns.rs
src/names/src/: lib.rs.html
tests/: names-generator.rs  version-numbers.rs
