[package]
name = "names"
version = "0.1.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]

[lib]
name = "names"
path = "src/lib.rs"

[[bin]]
name = "names"

[dependencies]
# pending a release which includes https://github.com/kbknapp/clap-rs/pull/257
clap = { git = "https://github.com/kbknapp/clap-rs", rev = "40104af" }
rand = "0.3.0"

