[package]
name = "names-cli"
version = "0.11.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
license = "MIT"
repository = "https://github.com/fnichol/names.git"
homepage = "https://github.com/fnichol/names.git"
description = """
A program to generate random names that look like 'used-jellyfish'.
"""

[[bin]]
name = "names"

[dependencies.clap]
version = "~2.3"
features = [ "suggestions", "color", "unstable" ]

[dependencies.names]
path = ".."
