[package]
name = "names-cli"
version = "0.11.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/fnichol/names.git"
homepage = "https://github.com/fnichol/names.git"
description = """
A random name generator with results like 'used-jellyfish'.
"""

[[bin]]
name = "names"
path = "src/main.rs"

[dependencies.clap]
version = "~2.32.0"
features = [ "suggestions", "color", "unstable" ]

[dependencies.names]
path = ".."
